// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorBoundary tests: ErrorBoundary getDerivedStateFromError test 1`] = `"<section class=\\"sc-AxjAm cgoQWF\\"><h3 class=\\"sc-AxirZ fwrrpd\\">Error: This is a test error!</h3><p class=\\"sc-AxiKw cWdryN\\">Show error stack</p></section>"`;

exports[`ErrorBoundary tests: ErrorBoundary getDerivedStateFromError test 2`] = `
"<section class=\\"sc-AxjAm cgoQWF\\"><h3 class=\\"sc-AxirZ fwrrpd\\">Error: This is a test error!</h3><p class=\\"sc-AxiKw cWdryN\\">Hide error stack</p><p class=\\"sc-AxhCb gOihBj\\">Error: This is a test error!
    at Object.it (/Users/igrekov/Downloads/_exp/task08-styleguide/styleguide/src/__tests__/components/error-boundary/error-boundary.test.js:58:23)
    at Object.asyncJestTest (/Users/igrekov/Downloads/_exp/task08-styleguide/styleguide/node_modules/jest-jasmine2/build/jasmineAsyncInstall.js:100:37)
    at resolve (/Users/igrekov/Downloads/_exp/task08-styleguide/styleguide/node_modules/jest-jasmine2/build/queueRunner.js:45:12)
    at new Promise (&lt;anonymous&gt;)
    at mapper (/Users/igrekov/Downloads/_exp/task08-styleguide/styleguide/node_modules/jest-jasmine2/build/queueRunner.js:28:19)
    at promise.then (/Users/igrekov/Downloads/_exp/task08-styleguide/styleguide/node_modules/jest-jasmine2/build/queueRunner.js:75:41)
    at process._tickCallback (internal/process/next_tick.js:68:7)</p></section>"
`;

exports[`ErrorBoundary tests: ErrorBoundary render error 1`] = `
<div>
  <input
    type="text"
    value={null}
  />
</div>
`;

exports[`ErrorBoundary tests: ErrorBoundary render no errors 1`] = `
<div>
  I am valid
</div>
`;
